# book-store-management-backend/docs/swagger.yaml
@@ -140,6 +140,32 @@ definitions:
         example: Tôi là Bêtô
         type: string
     type: object
+  booktitlemodel.ReqUpdateBookInfo:
+    properties:
+      authorIds:
+        example:
+        - tgnna
+        items:
+          type: string
+        type: array
+      categoryIds:
+        example:
+        - dmtt
+        - dmtruyen
+        items:
+          type: string
+        type: array
+      desc:
+        example: Tôi Là Bêtô là tác phẩm của nhà văn chuyên viết cho thanh thiếu niên
+          Nguyễn Nhật Ánh.
+        type: string
+      id:
+        example: bookId
+        type: string
+      name:
+        example: Tôi là Bêtô
+        type: string
+    type: object
   booktitlemodel.ResBookTitleDetail:
     properties:
       data:
@@ -1165,9 +1191,45 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/booktitlemodel.ResBookTitleDetail'
+        "400":
+          description: error
+          schema:
+            $ref: '#/definitions/common.AppError'
       security:
       - BearerAuth: []
       summary: Get booktitle detail by id
+      tags:
+      - booktitles
+  /booktitles/{id}/info:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: booktitle id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: booktitle info to update
+        in: body
+        name: booktitle
+        required: true
+        schema:
+          $ref: '#/definitions/booktitlemodel.ReqUpdateBookInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: status of response
+          schema:
+            $ref: '#/definitions/common.ResSuccess'
+        "400":
+          description: error
+          schema:
+            $ref: '#/definitions/common.AppError'
+      security:
+      - BearerAuth: []
+      summary: Update info booktitle
       tags:
       - booktitles
   /categories:
