# book-store-management-backend/module/booktitle/booktitletransport/z_route.go
@@ -12,9 +12,9 @@ func SetupRoutes(router *gin.RouterGroup, appCtx appctx.AppContext) {
 	{
 		books.GET("", ListBookTitle(appCtx))
 		books.POST("", CreateBookTitle(appCtx))
-		books.PATCH("/:id", UpdateBookTitleInfo(appCtx))
 		books.DELETE("/:id", DeleteBookTitle(appCtx))
 
 		books.GET("/:id", GetBookTitleDetail(appCtx))
+		books.PATCH("/:id/info", UpdateBookTitleInfo(appCtx))
 	}
 }
